fix: change map label visibility

--- a/src/App.css
+++ b/src/App.css
@@ -870,14 +870,14 @@ section {
   }
 }
 .contact-page .info-map .contact-info {
-  display: none;
+  display: block;
   position: absolute;
   top: 100px;
   left: 0;
   background: black;
   color: white;
   padding: 20px 20px;
-  z-index: 10;
+  z-index: 101;
 }
 .contact-page .info-map .map-wrapper {
   background: rgba(8, 253, 216, 0.1);
