--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -160,14 +160,14 @@
     //}
 
     .contact-info {
-      display: none;
+      display: block;
       position: absolute;
       top: 100px;
       left: 0;
       background: black;
       color: white;
       padding: 20px 20px;
-      z-index: 10;
+      z-index: 101;
     }
 
     .map-wrapper {
